--- a/src/views/mailTemplates/reportUser/html.ejs
+++ b/src/views/mailTemplates/reportUser/html.ejs
@@ -24,13 +24,13 @@
     <br />
     <div>
       <h3>Customer Details:</h3>
-      <%- include('../../../partials/userDetails', { user: reportingUser }); %>
+<%- include('../../partials/userDetails', { user: reportingUser }); %>
     </div>
     <br />
     <br />
     <div>
       <h3>Affiliate Details:</h3>
-      <%- include('../../../partials/userDetails', { user: reportedUser }); %>
+<%- include('../../partials/userDetails', { user: reportingUser }); %>
     </div>
     <br />
     <br />
